--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;400&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Muli", sans-serif;
+}
+.card{
+  width: 18rem;
+ 
+  
+}
+
+body {
+margin: 0;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+.navbar{
+background-color: #fff !important;
+}
+.navbar-brand{
+font-size: 1.9rem;
+text-transform: capitalize;
+}
+.navbar a{
+font-size: 1.3rem;
+text-transform: capitalize;
+}
+.brand-name{
+font-size: 2.9rem;
+text-transform: capitalize;
+color:  #3498db !important;
+}
+.menu_active {
+font-weight: bold;
+border-bottom: 1px solid #565387;
+}
+.navbar a:hover{
+color:  #3498db !important;
+}
+#header .btn-get-started{
+font-weight: 500;
+font-size: 16px;
+letter-spacing: 1px;
+display: inline-block;
+padding: 10px 30px;
+border-radius: 50px;
+transition: 0.5s;
+color:#3498db;
+border: 2px solid #3498db;
+text-decoration: none;
+}
+#header .btn-get-started:hover{
+background: #3498db;
+color: #fff;
+}
+.header-img{
+text-align: right;
+}
+#header .animated{
+animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+@-webkit-keyframes up-down {
+0%{
+  transform: translateY;
+}
+100%{
+  transform: translateY(-100px);
+}
+}
+@keyframes up-down {
+0%{
+  transform: translateY;
+}
+100%{
+  transform: translateY(-30px);
+}
+}
+@media (max-width: 991px){
+.navbar-brand{
+font-size:1.5rem !important;
+}
+.menu_active{
+font-weight: bold;
+border-bottom: none;
+}
 }
